2003-04-01  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/NSMenuView.m (NSMenuWindowTitleView): reformatted one line to 
	conform to coding standards

	* Source/NSMenu.m: renamed ivar _changed to _needsSizing.
	([NSMenu -sizeToFit]): Changed call [_view update] to [_view sizeToFit]
	([NSMenu -displayTransient]): call [NSMenuView-update] to ensure that the 
	menuView knows it belongs to a transient menu
	([NSMenu -closeTransient]): call [NSMenuView-update] to ensue that the 
	menuView knows it is not transient anymore.

	* Headers/gnustep/gui/NSMenu.h: renamed ivar _changed to _needsSizing.

2003-04-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSApplication.m: ensure that application initialisation
	is performed in the main thread.

2003-03-31  Adam Fedor  <fedor@gnu.org>

	* Source/NSWindow.m (-becomeKeyWindow): Set initialFirstResponder.
	(-display): Remove this code from here.

2003-03-31  Adam Fedor  <fedor@gnu.org>

	* Source/NSButtonCell.m, Source/NSCell.m, Source/NSMenuItem.m:
	Add GSCategories.h

2003-03-30 19:14  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSScroller.m (-trackKnob:): Wrap each iteration of the
	loop in an autorelease pool.

	* Source/NSTextView.m: Correct the name of the delegate method
	-textView:shouldChangeTextInRange:replacementString: (was missing
	the textView: part).

2003-03-30  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/NSMenuView.m: Reformatted to comply to coding standards

	* Source/NSMenu.m: Reformatted to comply to coding standards


2003-03-28 21:08  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTableView.m (mouseDown:): Wrap each iteration of the mouse
	tracking loop in an autorelease pool to avoid using huge amounts of
	memory if the button is held down a long time.

2003-03-28  Serg Stoyan  <stoyan@on.com.ua>

	* Source/NSMenuView.m:
	(attachSubmenuForItemAtIndex:): Documentation comment moved to 
	NSMenuView.h.
	(indexOfItemAtPoint:): ditto.
	(locationForSubmenu:): ditto.